--- a/src/map/style.css
+++ b/src/map/style.css
@@ -47,3 +47,9 @@
     padding: 10px;
     height: 40px;
 }
+
+#map {
+    min-height: calc(100vh - 50px);
+    width: 100%;
+    margin-top: 50px
+}
