--- a/src/clients/style.css
+++ b/src/clients/style.css
@@ -46,6 +46,12 @@
 .btn {
     padding: 10px;
     height: 40px;
+    background-color: transparent;
+    color: white;
+    border: none;
+}
+.btn:focus{
+    outline: none;
 }
 
 #client-info {
